@@ -2,6 +2,7 @@ neotoma 1.7.5
 ====================
 o Introduction of the `sf` package into the package.  Using `sf` to buffer and transform coordinates to allow a proper buffer and bounding box to be generated to identify the *n* closest sites to a point of interest.
 o Added a warning to `plot_leaflet()` for the default response.
+o Updated `param_check()` to include new dataset types within the database.
 
 neotoma 1.7.4
 ====================
